--- a/config-ser/src/main/resources/bootstrap.yml
+++ b/config-ser/src/main/resources/bootstrap.yml
@@ -20,3 +20,6 @@ eureka:
     service-url:
       defaultZone: http://test:test@localhost:8761/eureka/  #服务注册中心的配置内容，指定服务注册中心的位置
 
+management:
+  security:
+    enabled: false  #动态刷新配置 ---需要忽略权限拦截
