--- a/oldssm/pom.xml
+++ b/oldssm/pom.xml
@@ -65,6 +65,17 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.0.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.netflix.eureka</groupId>
+      <artifactId>eureka-client</artifactId>
+      <version>1.4.12</version>
+    </dependency>
+    <dependency>
+      <groupId>com.netflix.archaius</groupId>
+      <artifactId>archaius-core</artifactId>
+      <version>0.7.3</version>
+    </dependency>
   </dependencies>
 
 </project>
