--- a/oldssm/src/main/webapp/WEB-INF/web.xml
+++ b/oldssm/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>com.smilehelo.ssm.listener.EurekaInitAndRegisterListener</listener-class>
+  </listener>
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
