测试自定义eureka配置

--- a/oldssm/src/main/resources/config.properties
+++ b/oldssm/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 eureka.region=default
-eureka.name=test-project
-eureka.vipAddress=test
+eureka.name=oldssm
+eureka.vipAddress=oldssm
 eureka.preferSameZone=true
 eureka.shouldUseDns=false
 eureka.us-east-1.availabilityZones=default
