--- a/oldssm/src/main/webapp/WEB-INF/web.xml
+++ b/oldssm/src/main/webapp/WEB-INF/web.xml
@@ -1,36 +1,42 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" metadata-complete="true" version="3.1">
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+                      http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         version="3.1"
+         metadata-complete="true">
+  <!-- 修改servlet版本 为3.1 -->
 
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
+  <!--  加载程序上下文地址 -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:spring/spring-*.xml</param-value>
   </context-param>
+  <!-- Spring 容器启动监听器 -->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
   <listener>
     <listener-class>com.smilehelo.ssm.listener.EurekaInitAndRegisterListener</listener-class>
   </listener>
+
+  <!--1.配置spring分发器(是总的控制中心  被拦截的url会汇聚到该servlet) -->
   <servlet>
     <servlet-name>springmvc</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!--配置spring上下文  (从该目录下加载spring mvc的配置文件) -->
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>classpath:spring-web.xml</param-value>
+      <param-value>classpath:spring/spring-web.xml</param-value>
     </init-param>
-    <load-on-startup>1</load-on-startup>
   </servlet>
+
+  <!--2. 配置spring拦截的url模板  以/结尾的url-->
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
-
+  <!--5. 编码字符集统一为UTF-8（过滤器） -->
   <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -41,6 +47,6 @@
   </filter>
   <filter-mapping>
     <filter-name>encodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/</url-pattern>
   </filter-mapping>
 </web-app>
