--- a/study-ser/src/main/resources/bootstrap.yml
+++ b/study-ser/src/main/resources/bootstrap.yml
@@ -8,6 +8,13 @@ spring:
     config:
       uri: http://localhost:8888/ #配置中心地址
       enabled: true #是否开启配置中心
+  datasource: #数据源
+    url: jdbc:mysql://localhost:3306/localTest?charset=utf8&useSSL=false
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
+  jpa:
+    show-sql: true
 
 
 eureka:
